# cicd-test1

./: .gitignore  automated-retrain.yml  docker-compose.yml  dockerfile  logging_config.py  main.py  mlflow.db  prometheus.yml  pyproject.toml  requirements.txt  test_main.py
.github/workflows/: cd.yml  ci.yml  prometheus.yml  retrain.yml
